[package]
name = "panphon2"
version = "2.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "panphon2"
crate-type = ["cdylib"]

[package.metadata.maturin]
classifier = [
  "Programming Language :: Rust",
  "Operating System :: POSIX :: Linux",
]

[dependencies]

[dependencies.pyo3]
version = "0.15.0"
features = ["extension-module"]

[dependencies.rspanphon]
path = "/Users/mortensen/Projects/rspanphon"
version = "0.1.0"